--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -20,7 +20,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="BO\" />
+	  <Folder Include="BlApi\" />
+	  <Folder Include="BlImplementation\" />
 	  <Folder Include="BlApi\" />
 	  <Folder Include="BlImplementation\" />
 	</ItemGroup>
